[package]
name = "hack-n-slash"
version = "1.0.0"
edition = "2018"
authors = ["Ferris Armstrong"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.17"
specs-derive = "0.4.1"

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["image"]